# serializer version: 1
# name: TestSessionsQueryRunner.test_basic_sessions_query
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'UTC')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_basic_sessions_query_minus_utc
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'America/Phoenix')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'America/Phoenix')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'America/Phoenix')), max(toTimeZone(raw_sessions.max_timestamp, 'America/Phoenix'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'America/Phoenix')), max(toTimeZone(raw_sessions.max_timestamp, 'America/Phoenix'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 07:00:05.000000', 6, 'America/Phoenix'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'America/Phoenix'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 07:00:05.000000', 6, 'America/Phoenix')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'America/Phoenix')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_basic_sessions_query_plus_utc
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'Asia/Tokyo')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'Asia/Tokyo')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'Asia/Tokyo')), max(toTimeZone(raw_sessions.max_timestamp, 'Asia/Tokyo'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'Asia/Tokyo')), max(toTimeZone(raw_sessions.max_timestamp, 'Asia/Tokyo'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 23:00:05.000000', 6, 'Asia/Tokyo'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'Asia/Tokyo'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 23:00:05.000000', 6, 'Asia/Tokyo')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'Asia/Tokyo')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_date_range
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'UTC')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-03 23:59:59.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-02 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-03 23:59:59.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-02 00:00:00.000000', 6, 'UTC')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_date_range_minus_utc
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'America/Phoenix')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'America/Phoenix')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'America/Phoenix')), max(toTimeZone(raw_sessions.max_timestamp, 'America/Phoenix'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'America/Phoenix')), max(toTimeZone(raw_sessions.max_timestamp, 'America/Phoenix'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-03 16:59:59.000000', 6, 'America/Phoenix'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-02 00:00:00.000000', 6, 'America/Phoenix'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-03 16:59:59.000000', 6, 'America/Phoenix')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-02 00:00:00.000000', 6, 'America/Phoenix')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_date_range_plus_utc
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'Asia/Tokyo')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'Asia/Tokyo')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'Asia/Tokyo')), max(toTimeZone(raw_sessions.max_timestamp, 'Asia/Tokyo'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'Asia/Tokyo')), max(toTimeZone(raw_sessions.max_timestamp, 'Asia/Tokyo'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-04 08:59:59.000000', 6, 'Asia/Tokyo'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-02 00:00:00.000000', 6, 'Asia/Tokyo'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-04 08:59:59.000000', 6, 'Asia/Tokyo')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-02 00:00:00.000000', 6, 'Asia/Tokyo')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_limit_and_offset
  '''
  SELECT tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) AS `tuple(session_id, distinct_id, $start_timestamp, $end_timestamp, $session_duration, $entry_current_url, $end_current_url, $pageview_count, $autocapture_count, $screen_count, $is_bounce)`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'UTC')) AS `$end_timestamp`,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS `$session_duration`,
            nullIf(nullIf(argMinMerge(raw_sessions.entry_url), 'null'), '') AS `$entry_current_url`,
            nullIf(nullIf(argMaxMerge(raw_sessions.end_url), 'null'), '') AS `$end_current_url`,
            uniqMerge(raw_sessions.pageview_uniq) AS `$pageview_count`,
            uniqMerge(raw_sessions.autocapture_uniq) AS `$autocapture_count`,
            uniqMerge(raw_sessions.screen_uniq) AS `$screen_count`,
            if(ifNull(equals(uniqMerge(raw_sessions.pageview_uniq), 0), 0), NULL, not(or(ifNull(greater(uniqMerge(raw_sessions.pageview_uniq), 1), 0), ifNull(greater(uniqMerge(raw_sessions.autocapture_uniq), 0), 0), greaterOrEquals(dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))), 10)))) AS `$is_bounce`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC')), 0))
  ORDER BY tuple(sessions.session_id, sessions.distinct_id, sessions.`$start_timestamp`, sessions.`$end_timestamp`, sessions.`$session_duration`, sessions.`$entry_current_url`, sessions.`$end_current_url`, sessions.`$pageview_count`, sessions.`$autocapture_count`, sessions.`$screen_count`, sessions.`$is_bounce`) ASC
  LIMIT 3
  OFFSET 1 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_with_aggregation
  '''
  SELECT sessions.distinct_id AS distinct_id,
         count() AS `count()`
  FROM
    (SELECT nullIf(argMaxMerge(raw_sessions.distinct_id), 'null') AS distinct_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 15:00:05.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 15:00:05.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC')), 0))
  GROUP BY sessions.distinct_id
  ORDER BY count() DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_with_custom_order_by
  '''
  SELECT sessions.session_id AS session_id,
         sessions.`$start_timestamp` AS `$start_timestamp`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 15:00:05.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 15:00:05.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC')), 0))
  ORDER BY sessions.`$start_timestamp` ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_with_session_duration
  '''
  SELECT sessions.session_id AS session_id,
         sessions.`$session_duration` AS `$session_duration`,
         sessions.`$start_timestamp` AS `$start_timestamp`,
         sessions.`$end_timestamp` AS `$end_timestamp`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS `$session_duration`,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            max(toTimeZone(raw_sessions.max_timestamp, 'UTC')) AS `$end_timestamp`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC')), 0))
  ORDER BY sessions.`$start_timestamp` DESC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestSessionsQueryRunner.test_sessions_with_where_clause
  '''
  SELECT sessions.session_id AS session_id,
         sessions.`$session_duration` AS `$session_duration`
  FROM
    (SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id,
            dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS `$session_duration`,
            min(toTimeZone(raw_sessions.min_timestamp, 'UTC')) AS `$start_timestamp`,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC'), toIntervalDay(3))))
     GROUP BY raw_sessions.session_id_v7,
              raw_sessions.session_id_v7) AS sessions
  WHERE and(ifNull(greater(sessions.`$session_duration`, 300), 0), ifNull(less(sessions.`$start_timestamp`, toDateTime64('2024-01-01 14:00:05.000000', 6, 'UTC')), 0), ifNull(greater(sessions.`$start_timestamp`, toDateTime64('2024-01-01 00:00:00.000000', 6, 'UTC')), 0))
  ORDER BY sessions.session_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
